Work work work....

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -6,6 +6,7 @@ $\\[0.5cm]$
 \begin{center}
 \begin{tabular}{ l c l }
    ADC & = & Analog-to-Digital Converter \\
+   AIS & = & Automatic Identification System \\
    ASV & = & Autonomous Surface Vehicle \\
    CNN & = & Convolutional Neural Net \\
    CCD & = & Charge Coupled Device \\
