--- a/mylib.bib
+++ b/mylib.bib
@@ -232,6 +232,14 @@ isbn = {},
   note = {Accessed: 2017-12-06},
 }
 
+@misc{camera_calibrator,
+	title = {Estimate geometric parameters of a single camera - MATLAB},
+	author = {MathWorks, Inc},
+	howpublished = {\url{https://se.mathworks.com/help/vision/ref/cameracalibrator-app.html}},
+	note = {Accessed: 2017-12-08},
+}
+
+
 @misc{ros_drivers,
   title = {ROS device drivers},
   howpublished = {\url{https://github.com/ros-drivers}},
